Header section created
nav link and quick links added in header

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       padding: 0px;
       margin: 0px;
       overflow: hidden;
+      font-family: Verdana, sans-serif;
     }
   </style>
 </head>
